k8s/db-host-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: db-host-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: db-host
    spec:
      containers:
        - name: db-host-container
          image: phpmyadmin/phpmyadmin
          ports:
          - containerPort: 3333
  selector:
    matchLabels:
      component: db-host
