k8s/ecommerce-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: ecommerce-service
    spec:
      containers:
        - name: ecommerce-container
          image: teabreak/thesis-ecomerce:latest
          ports:
          - containerPort: 8082
  selector:
    matchLabels:
      component: ecommerce-service
