k8s/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: front-end-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
        - name: front-end-container
          image: teabreak/thesis-ecomerce:latest
          ports:
          - containerPort: 3000
  selector:
    matchLabels:
      component: front-end
