k8s/recommend-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: recommender-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      component: recommender

  template:
    metadata:
      labels:
        component: recommender

    spec:
      containers:
        - name: recommender
          image: teabreak/recommender_service:latest
      ports:
        - port: 3306
          targetPort: 3306
