k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web-deployment

spec:
  replicas: 3
  template:
    metadata:
      labels:
        component: web-service
    spec:
      containers:
        - name: web-container
          image: teabreak/thessis-web:latest
          ports:
          - containerPort: 3000
  selector:
    matchLabels:
      component: web-service
