k8s/db-host-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: db-host-service

spec:
  selector:
    component: db-host
  type: ClusterIP
  ports:
    - port: 3333
      targetPort: 80
