k8s/frront-end.yaml
apiVersion: v1

kind: Service

metadata:
  name: front-end

spec:
  selector:
    component: front-end
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
