k8s/mysql-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: mysql-service

spec:
  selector:
    component: mysql

  type: ClusterIP

  ports:
    - port: 3306
      targetPort: 3306
