k8s/recommend-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: recommender-service

spec:
  selector:
    component: recommender
  type: ClusterIP
  ports:
    - port: 9180
      targetPort: 9180
