k8s/web-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: web-service

spec:
  selector:
    component: thesis-backend
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
