k8s/ingress-db.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: thesis-ingress

spec:
  rules:
      - http:
          paths:
            - path: /db
              pathType: Prefix
              backend:
                service:
                  name: db-host-service
                  port:
                    number: 3333
