k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: thesis-ingress

spec:
  rules:
    - http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port: 
                  number: 8082
          - path: /dbhost
            pathType: Prefix
            backend:
              service:
                name: db-host
                port:
                  number: 3333
